--- a/client/my-sites/pages/style.scss
+++ b/client/my-sites/pages/style.scss
@@ -36,14 +36,16 @@
 
 // <Page> component
 .page {
+	align-items: center;
+	display: flex;
 
 	.site-icon {
 		display: none;
 
 		@include breakpoint( ">660px" ) {
 			display: block;
-			float: left;
 			margin-right: 10px;
+			min-width: 34px;
 		}
 	}
 
@@ -123,11 +125,15 @@
 	}
 }
 
+.page__main {
+	flex-grow: 1;
+}
+
 .page__title,
 .page__title:visited {
 	display: inline;
 	color: $gray-dark;
-	font-weight: 500;
+	font-weight: bold;
 	font-family: $serif;
 	margin-right: 33px;
 
@@ -137,29 +143,12 @@
 	}
 }
 
-.page__posts-page {
-	color: $gray;
-	display: block;
-	font-size: 12px;
-	margin-top: -3px;
-}
-
-.page__site-url {
-	color: $gray;
-	display: block;
-	font-size: 12px;
-	font-style: italic;
-	margin-top: -3px;
-}
-
 .page__actions-toggle {
-	color: $gray;
+	color: $gray-text-min;
 	cursor: pointer;
 	font-size: 24px;
-	margin: 17px 24px;
-	position: absolute;
-		right: 0;
-		top: 0;
+	margin-left: 24px;
+	min-width: 24px;
 	transition: all 0.15s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 
 	&.is-active {
