Updated style of Page card to match design indent (#13729)

--- a/assets/stylesheets/_components.scss
+++ b/assets/stylesheets/_components.scss
@@ -290,6 +290,7 @@
 @import 'my-sites/no-results/style';
 @import 'my-sites/pages/style';
 @import 'my-sites/pages/blog-posts-page/style';
+@import 'my-sites/pages/page-card-info/style';
 @import 'my-sites/people/delete-user/style';
 @import 'my-sites/people/edit-team-member-form/style';
 @import 'my-sites/people/people-list-item/style';
