--- a/assets/stylesheets/_components.scss
+++ b/assets/stylesheets/_components.scss
@@ -129,6 +129,7 @@
 @import 'components/infinite-list/style';
 @import 'components/info-popover/style';
 @import 'components/input-chrono/style';
+@import 'components/jsx-tree-renderer/style';
 @import 'components/logged-out-form/style';
 @import 'components/language-picker/style';
 @import 'components/main/style';
