--- a/client/reader/following-manage/style.scss
+++ b/client/reader/following-manage/style.scss
@@ -195,10 +195,9 @@
 }
 
 .following-manage__url-follow {
-	min-height: 30px;
-	margin-top: 10px;
-	padding-bottom: 10px;
 	border-bottom: 1px solid lighten( $gray, 30% );
+	min-height: 30px;
+	padding: 13px 0 10px;
 	display: flex;
 	justify-content: center;
 
