Reader: Align blavatars

--- a/client/blocks/reader-post-card/style.scss
+++ b/client/blocks/reader-post-card/style.scss
@@ -323,7 +323,7 @@ $reader-post-card-breakpoint-small: "( max-width: 550px )";
 	}
 
 	&.has-site-icon {
-		margin: 0 9px 0 -1px;
+		margin: 0 9px 0 0;
 	}
 
 	.site-icon {
