Purchases: Add placeholders while plan details are loading

--- a/assets/stylesheets/_components.scss
+++ b/assets/stylesheets/_components.scss
@@ -256,6 +256,7 @@
 @import 'me/purchases/purchase-item/style';
 @import 'me/purchases/purchases-site/style';
 @import 'me/purchases/manage-purchase/style';
+@import 'me/purchases/manage-purchase/plan-details/style';
 @import 'me/purchases/remove-purchase/style';
 @import 'me/reauth-required/style';
 @import 'me/security-2fa-backup-codes-list/style';
