--- a/client/reader/following-manage/style.scss
+++ b/client/reader/following-manage/style.scss
@@ -175,6 +175,10 @@
 	}
 }
 
+.following-manage .reader-recommended-sites {
+	border-bottom: 1px solid lighten( $gray, 30% );
+}
+
 .following-manage__search-followed {
 	margin-left: 0;
 }
