site / back link bg color

--- a/client/extensions/woocommerce/style.scss
+++ b/client/extensions/woocommerce/style.scss
@@ -16,6 +16,7 @@
 	.store-sidebar__ground-control {
 		align-items: center;
 		border-bottom: 1px solid darken( $sidebar-bg-color, 10% );
+		background-color: $white;
 		display: flex;
 		width: 100%;
 	}
