Adds vertical scroll bar to the modal navigation when there are a large number of variations to display. Also adds a helper function for getting the modals current selected variation.

--- a/client/extensions/woocommerce/app/products/product-form.scss
+++ b/client/extensions/woocommerce/app/products/product-form.scss
@@ -265,16 +265,21 @@
 	.vertical-menu {
 		width: 200px;
 		flex: 1 auto;
+		overflow-y: scroll;
+		max-height: 600px;
 	}
 
 	.vertical-menu__items {
 		padding-left: 16px;
+		min-height: 45px;
 	}
 
 	.products__product-form-modal-wrapper {
 		display: flex;
 		flex-flow: row wrap;
 		padding: 16px;
+		max-height: 80vh;
+		overflow-y: hidden;
 	}
 
 	h1 {
