Stops the site link / back icon shrinking vertically when the browser is small

--- a/client/extensions/woocommerce/style.scss
+++ b/client/extensions/woocommerce/style.scss
@@ -13,6 +13,8 @@
 }
 
 .store-sidebar__sidebar {
+	display: block;
+
 	.store-sidebar__ground-control {
 		align-items: center;
 		border-bottom: 1px solid darken( $sidebar-bg-color, 10% );
