Purchases: Add the theme gridicon to theme purchases

--- a/client/me/purchases/purchase-item/style.scss
+++ b/client/me/purchases/purchase-item/style.scss
@@ -55,11 +55,18 @@
 	max-width: 32px;
 	width: 32px;
 
-	.gridicons-domains {
+	.gridicon {
 		padding: 4px;
-		border-radius: 50%;
 		background: $blue-medium;
 		fill: $white;
+	}
+
+	.gridicons-domains {
+		border-radius: 50%;
+	}
+
+	.gridicons-themes {
+		border-radius: 4px;
 	}
 }
 
