--- a/client/extensions/woocommerce/app/products/product-form.scss
+++ b/client/extensions/woocommerce/app/products/product-form.scss
@@ -295,3 +295,81 @@
 		margin-left: 8px;
 	}
 }
+
+.products__additional-details-card {
+	margin-top: -1em;
+	border-top: 0;
+}
+
+.products__additional-details-form-labels {
+	display: flex;
+
+	label:first-child {
+		width: 35%;
+	}
+}
+
+.products__additional-details-container {
+	margin-top: 1em;
+	display: flex;
+}
+
+.products__additional-details-form-group {
+	width: 60%;
+	margin-right: 1.5em;
+}
+
+.products__additional-details-form-inputs {
+	background: $gray-light;
+	padding: 5px;
+	border: 1px solid lighten( $gray, 30% );
+	border-radius: 4px;
+	margin-right: 1em;
+	margin-bottom: 1em;
+}
+
+.products__additional-details-preview-container {
+	width: 30%;
+}
+
+.products__additional-details-preview-label {
+	text-transform: uppercase;
+	font-size: 12px;
+}
+
+.products__additional-details-preview-title {
+	border-bottom: 1px solid lighten( $gray, 30% );
+	padding-bottom: 10px;
+	margin-bottom: 1em;
+}
+
+.products__additional-details-preview {
+	border: 1px solid lighten( $gray, 20% );
+	padding: 10px;
+}
+
+.products__additional-details-preview-row {
+	display: flex;
+	flex-direction: row;
+	border-bottom: 1px solid lighten( $gray, 30% );
+	padding-bottom: 10px;
+	margin-bottom: 1em;
+}
+
+.products__additional-details-preview-type {
+	width: 40%;
+	margin-right: 1em;
+	font-weight: bold;
+	overflow-wrap: break-word;
+}
+
+.products__additional-details-form-fieldset {
+	display: flex;
+	flex-direction: row;
+	margin-bottom: 1em;
+
+	.form-text-input {
+		width: 40%;
+		margin-right: 1.5em;
+	}
+}
