Adds a component to display address

--- a/client/extensions/woocommerce/style.scss
+++ b/client/extensions/woocommerce/style.scss
@@ -9,6 +9,7 @@
 	flex-grow: 1;
 
 	@import 'app/products/product-form';
+	@import 'components/address-view/style';
 	@import 'components/extended-header/style';
 	@import 'components/form-dimensions-input/style';
 }
