Fix placeholders for recommended sites block

--- a/client/blocks/reader-recommended-sites/style.scss
+++ b/client/blocks/reader-recommended-sites/style.scss
@@ -180,8 +180,24 @@ $reader-related-card-v2-breakpoint-small: "( max-width: 535px )";
 		word-break: break-all;
 		width: 100%;
 
-		&::after{
-			@include long-content-fade( $size: 20% );
+		&:not(.is-placeholder) {
+			&::after {
+				@include long-content-fade( $size: 20% );
+			}
+		}
+
+		&.is-placeholder {
+			margin-top: 2px;
+		}
+	}
+
+	.reader-subscription-list-item.reader-subscription-list-item__placeholder {
+		.reader-subscription-list-item__site-url.is-placeholder {
+			margin-top: 2px;
+		}
+
+		.reader-subscription-list-item__site-excerpt.is-placeholder {
+			max-width: 70%;
 		}
 	}
 }
