file picker on desktop

--- a/client/extensions/woocommerce/components/product-image-uploader/style.scss
+++ b/client/extensions/woocommerce/components/product-image-uploader/style.scss
@@ -64,6 +64,10 @@
 		background: $gray-light;
 		position: relative;
 
+		@include breakpoint( ">960px" ) {
+			height: 72px;
+		}
+
 		.gridicon {
 			position: absolute;
 			top: 50%;
