--- a/client/blocks/reader-full-post/_content.scss
+++ b/client/blocks/reader-full-post/_content.scss
@@ -331,6 +331,22 @@
 	}
 }
 
+// Longreads-Specific Full Post View Styles
+.blog-70135762 .reader-full-post__story-content {
+	
+	.publisher-intro {
+		img {
+			margin-bottom: 0;
+		}
+
+		@include breakpoint( "<660px" ) {
+			p:first-child {
+				margin-bottom: 0;
+			}
+		}
+	}
+}
+
 // gizmodo fixes
 .reader-full-post.feed-10080096 {
 	.align--bleed {
