--- a/client/blocks/login/style.scss
+++ b/client/blocks/login/style.scss
@@ -117,7 +117,7 @@
 }
 
 .card.two-factor-authentication__form-action {
-	background: $sidebar-bg-color;
+	background: $white;
 }
 
 .two-factor-authentication__small-print {
