file-picker dimensions

--- a/client/extensions/woocommerce/components/product-image-uploader/style.scss
+++ b/client/extensions/woocommerce/components/product-image-uploader/style.scss
@@ -67,6 +67,7 @@
 		cursor: pointer;
 		background: $gray-light;
 		position: relative;
+		box-sizing: border-box;
 
 		.gridicon {
 			position: absolute;
