Handles PR Feedback: Cleans up markup, decouples product & editProduct from ProductFormImages, fixes translations, general code cleanup.

--- a/client/extensions/woocommerce/app/products/product-form.scss
+++ b/client/extensions/woocommerce/app/products/product-form.scss
@@ -85,8 +85,10 @@
 			width: 100%;
 			height: auto;
 		}
+	}
 
-		&:first-child {
+	.products__product-form-images-featured {
+		.products__product-form-images-item {
 			margin-right: 0;
 			clear: both;
 			width: 100%;
