--- a/client/extensions/woocommerce/app/products/product-form.scss
+++ b/client/extensions/woocommerce/app/products/product-form.scss
@@ -43,38 +43,8 @@
 	.products__product-form-images-item {
 		position: relative;
 		display: inline-block;
-		margin-right: 2%;
 		margin-bottom: 16px;
-		width: 18.4%;
-
-		@include breakpoint( ">960px" ) {
-			width: 30%;
-			margin-right: 5%;
-		}
-
-		&:nth-child( 4 ) {
-			margin-right: 2%;
-
-			@include breakpoint( ">960px" ) {
-				margin-right: 0;
-			}
-		}
-
-		&:nth-child( 5 ) {
-			clear: both;
-		}
-
-		&:nth-child( 6 ) {
-			margin-right: 0;
-
-			@include breakpoint( ">960px" ) {
-				margin-right: 5%;
-			}
-		}
-
-		&:nth-child( 7 ) {
-			clear: both;
-		}
+		margin-right: 16px;
 
 		figure {
 			border: 1px solid lighten( $gray, 30% );
@@ -117,6 +87,21 @@
 		top: 50%;
 		left: 50%;
 		transform: translate( -50%, -50% );
+	}
+
+	.products__product-form-images-item.thumb figure {
+		width: 60px;
+		height: 60px;
+		overflow: hidden;
+
+		img {
+			position: absolute;
+			left: 50%;
+			top: 50%;
+			height: 100%;
+			width: auto;
+			transform: translate( -50%,-50% );
+		}
 	}
 
 	.products__product-form-images-item-remove {
