--- a/client/my-sites/upgrades/cart/style.scss
+++ b/client/my-sites/upgrades/cart/style.scss
@@ -227,6 +227,54 @@
 	text-align: center;
 }
 
+.cart__pulsing-badge {
+	background: $blue-medium;
+	border-radius: 16px;
+	color: $white;
+	cursor: pointer;
+	display: inline-block;
+	float: right;
+	font-size: 11px;
+	height: 16px;
+	width: 6px;
+	padding: 0 5px;
+	position: absolute;
+	top: 5px;
+	right: 5px;
+	box-shadow: 0 0 0 rgba(0,170,220, 0.4);
+	animation: pulsing-badge 2s infinite;
+}
+
+.cart__pulsing-badge:hover {
+	animation: none;
+}
+
+@-webkit-keyframes pulsing-badge {
+	0% {
+		-webkit-box-shadow: 0 0 0 0 rgba(0,170,220, 0.4);
+	}
+	70% {
+		-webkit-box-shadow: 0 0 0 10px rgba(0,170,220, 0);
+	}
+	100% {
+		-webkit-box-shadow: 0 0 0 0 rgba(0,170,220, 0);
+	}
+}
+@keyframes pulsing-badge {
+	0% {
+		-moz-box-shadow: 0 0 0 0 rgba(0,170,220, 0.4);
+		box-shadow: 0 0 0 0 rgba(0,170,220, 0.4);
+	}
+	70% {
+		-moz-box-shadow: 0 0 0 10px rgba(0,170,220, 0);
+		box-shadow: 0 0 0 10px rgba(0,170,220, 0);
+	}
+	100% {
+		-moz-box-shadow: 0 0 0 0 rgba(0,170,220, 0);
+		box-shadow: 0 0 0 0 rgba(0,170,220, 0);
+	}
+}
+
 div.popover-cart__popover {
 	width: 330px;
 
