--- a/client/reader/search-stream/style.scss
+++ b/client/reader/search-stream/style.scss
@@ -219,7 +219,7 @@ $reader-related-card-v2-breakpoint-small: "( max-width: 535px )";
 
 // search-stream-header
 // Posts and Sites SectionNav
-.search-stream .section-nav {
+.search-stream__header .section-nav {
 	background: inherit;
 	border-bottom: 2px solid lighten( $gray, 30% );
 	box-shadow: none;
@@ -227,7 +227,7 @@ $reader-related-card-v2-breakpoint-small: "( max-width: 535px )";
 	padding-bottom: 0;
 }
 
-.search-stream .section-nav-group {
+.search-stream__header .section-nav-group {
 	display: flex;
 	flex: 1 0 auto;
 	width: 0;
@@ -237,12 +237,12 @@ $reader-related-card-v2-breakpoint-small: "( max-width: 535px )";
 	}
 }
 
-.search-stream .section-nav-tabs__dropdown,
-.search-stream .section-nav__mobile-header {
+.search-stream__header .section-nav-tabs__dropdown,
+.search-stream__header .section-nav__mobile-header {
 	display: none;
 }
 
-.search-stream .section-nav-tabs__list {
+.search-stream__header .section-nav-tabs__list {
 	display: flex;
 
 	.section-nav-tab.is-selected {
@@ -264,7 +264,7 @@ $reader-related-card-v2-breakpoint-small: "( max-width: 535px )";
 	}
 }
 
-.search-stream .section-nav-tab__text {
+.search-stream__header .section-nav-tab__text {
 	font-weight: 600;
 	font-size: 13px;
 	letter-spacing: .04em;
@@ -282,14 +282,14 @@ $reader-related-card-v2-breakpoint-small: "( max-width: 535px )";
 	text-transform: uppercase;
 }
 
-.search-stream .search-stream__site-header {
+.search-stream__site-header {
 	margin-left: 40px;
 	max-width: 265px;
 	width: 100%;
 }
 
-.search-stream .search-stream__post-header,
-.search-stream .search-stream__site-header {
+.search-stream__post-header,
+.search-stream__site-header {
 	border-bottom: 2px solid lighten( $gray, 30% );
 	padding-bottom: 10px;
 	width: 100%;
