--- a/client/extensions/woocommerce/components/product-image-uploader/style.scss
+++ b/client/extensions/woocommerce/components/product-image-uploader/style.scss
@@ -6,9 +6,8 @@
 	margin-bottom: 16px;
 	border: 1px dashed $gray;
 	border-radius: 5px;
-	@include breakpoint( ">960px" ) {
-		width: 250px;
-	}
+	width: 250px;
+
 
 	.product-image-uploader__picker {
 		position: absolute;
@@ -47,27 +46,38 @@
 }
 
 .product-image-uploader__picker.compact {
-	width: 18.4%;
 	position: relative;
 	margin-bottom: 16px;
-	align-self: stretch;
+	margin-left: 8px;
+	margin-right: 8px;
+	background: $gray-light;
+	border: 1px dashed $gray;
+	width: 70px;
+	height: 70px;
+	border-radius: 5px;
+	display: inline-block;
 
 	@include breakpoint( ">960px" ) {
-		width: 30%;
+		margin-left: 0;
+		margin-right: 16px;
+	}
+
+	&:nth-child( 3n ) {
+		@include breakpoint( ">960px" ) {
+			margin-right: 0;
+		}
 	}
 
 	.file-picker,
 	.product-image-uploader__file-picker {
 		display: block;
 		text-align: center;
-		border: 1px dashed $gray;
-		min-height: 60px;
-		height: 100%;
-		border-radius: 5px;
 		cursor: pointer;
-		background: $gray-light;
-		position: relative;
-		box-sizing: border-box;
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
 
 		.gridicon {
 			position: absolute;
@@ -81,26 +91,6 @@
 	&:hover {
 		.gridicon {
 			color: darken( $gray, 30% );
-		}
-	}
-
-	&:nth-child( 6 ) {
-		margin-right: 0;
-
-		@include breakpoint( ">960px" ) {
-			margin-right: 5%;
-		}
-	}
-
-	&:nth-child( 7 ) {
-		clear: both;
-	}
-
-	&:nth-child( 7 ),
-	&:nth-child( 4 ) {
-		@include breakpoint( ">960px" ) {
-			clear: none;
-			margin-right: 0;
 		}
 	}
 }
