--- a/client/my-sites/upgrades/cart/style.scss
+++ b/client/my-sites/upgrades/cart/style.scss
@@ -236,11 +236,11 @@
 	float: right;
 	font-size: 11px;
 	height: 16px;
-	width: 6px;
 	padding: 0 5px;
 	position: absolute;
 	top: 5px;
 	right: 5px;
+	text-align: center;
 	box-shadow: 0 0 0 rgba(0,170,220, 0.4);
 	animation: pulsing-badge 2s infinite;
 }
