--- a/client/extensions/woocommerce/app/products/product-form.scss
+++ b/client/extensions/woocommerce/app/products/product-form.scss
@@ -34,19 +34,153 @@
 		flex-direction: row;
 	}
 }
-/* TODO: remove placeholder styles once implemented */
-.products__product-form-details-images {
-	background: $gray-light;
-	height: 200px;
-	margin-bottom: 16px;
-	@include breakpoint( ">960px" ) {
-		margin-bottom: 0;
+
+.products__product-form-images {
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+
+	.products__product-form-images-item {
+		position: relative;
+		display: inline-block;
+		margin-bottom: 16px;
+		margin-right: 8px;
+		margin-left: 8px;
+
+		@include breakpoint( ">960px" ) {
+			margin-left: 0;
+			margin-right: 16px;
+		}
+
+		figure {
+			border: 1px solid lighten( $gray, 30% );
+		}
+
+		img {
+			display: block;
+			width: 100%;
+			height: auto;
+		}
+	}
+
+	.products__product-form-images-featured {
+		.products__product-form-images-item {
+			margin-right: 0;
+			margin-left: 0;
+			clear: both;
+			width: 100%;
+		}
+	}
+
+	figure {
+		position: relative;
+		overflow: hidden;
+	}
+
+	.products__product-form-images-item.preview figure::after {
+		position: absolute;
+		top: 0;
+		right: 0;
+		bottom: 0;
+		left: 0;
+	}
+
+	.products__product-form-images-item.preview img {
+		opacity: 0.7;
+	}
+
+	.spinner {
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		transform: translate( -50%, -50% );
+	}
+
+	.products__product-form-images-thumbs {
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: center;
+
+		@include breakpoint( ">960px" ) {
+			justify-content: flex-start;
+		}
+
+		.products__product-form-images-item.thumb {
+			&:nth-child( 3n ) {
+				@include breakpoint( ">960px" ) {
+						margin-right: 0;
+				}
+			}
+		}
+	}
+
+	.products__product-form-images-item.thumb figure {
+		width: 70px;
+		height: 70px;
+		overflow: hidden;
+
+		img {
+			position: absolute;
+			left: 50%;
+			top: 50%;
+			height: 100%;
+			width: auto;
+			transform: translate( -50%,-50% );
+		}
+	}
+
+	.products__product-form-images-item-remove {
+		position: absolute;
+		top: 0;
+		right: 0;
+		width: 28px;
+		height: 28px;
+		transform: translate( 25%, -25% );
+		border: 1px solid lighten( $gray, 10% );
+		border-radius: 50%;
+		background-color: $gray-light;
+		cursor: pointer;
+
+		&:hover {
+			background: lighten( $gray, 30% );
+		}
+	}
+
+	.products__product-form-images-item-remove-icon.gridicon {
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		transform: translate( -50%, -50% );
+		width: 24px;
+		height: 24px;
+		margin: 0;
+		color: lighten( $gray, 10% );
+
+		&:hover {
+			color: $gray;
+		}
 	}
 }
 
-.products__product-form-details-images,
+.products__product-form-images-wrapper {
+	width: 100%;
+	margin-bottom: 16px;
+	@include breakpoint( ">960px" ) {
+		margin-bottom: 0;
+		width: 250px;
+	}
+}
+
+.products__product-form-images-wrapper .form-setting-explanation {
+	margin: 0;
+}
+
 .products__product-form-details-basic {
-	flex: 1;
+	flex: 2
+}
+
+.products__product-form-images-wrapper,
+.products__product-form-details-basic {
 	@include breakpoint( ">960px" ) {
 		margin-right: 32px;
 	}
@@ -66,6 +200,10 @@
 
 .products__product-form-details-basic-description textarea {
 	resize: vertical;
+}
+
+.products__product-form-details-basic-description {
+	margin-bottom: 0;
 }
 
 .products__variation-types-form-wrapper {
