--- a/client/blocks/comment-detail/style.scss
+++ b/client/blocks/comment-detail/style.scss
@@ -20,19 +20,24 @@
 
 .comment-detail__transition-enter {
 	opacity: 0.01;
+	visibility: hidden;
 
 	&.comment-detail__transition-enter-active {
 		opacity: 1;
-		transition: opacity .15s linear;
+		visibility: visible;
+		transition: all .15s linear;
+		transition-delay: .15s;
 	}
 }
 
 .comment-detail__transition-leave {
 	opacity: 1;
+	visibility: visible;
 
 	&.comment-detail__transition-leave-active {
 		opacity: 0.01;
-		transition: opacity .15s linear;
+		visibility: hidden;
+		transition: all .15s linear;
 	}
 }
 
