disable interactions with placeholder

--- a/client/blocks/site/style.scss
+++ b/client/blocks/site/style.scss
@@ -11,6 +11,8 @@
 	position: relative;
 
 	&.is-loading {
+		pointer-events: none;
+
 		.site-icon {
 			animation: pulse-light 0.8s ease-in-out infinite;
 		}
